--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 GOOGLE_APPLICATION_CREDENTIALS="./linum-dev-firebase-adminsdk-b7u2y-1faae2b9fe.json"
 NORDIGEN_SECRET_KEY="YOUR_SECRET_KEY"
 NORDIGEN_SECRET_ID="YOUR_SECRET_ID"
-DATABASE_URL="YOUR_CONNECTION_STRING"
+DATABASE_URL="postgres://username:password@localhost:5432/banking_db"
